--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <!-- Soft landing page-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="team" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/owl.carousel.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/font-awesome.min.css">
+     <!-- MAIN CSS -->
+     <link rel="stylesheet" href="css/tooplate-style.css">
+      <!-- Fim soft landing page -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
@@ -13,5 +28,13 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- SCRIPTS -->
+    <script src="<%= BASE_URL %>js/jquery.js"></script>
+    <script src="<%= BASE_URL %>js/bootstrap.min.js"></script>
+    <script src="<%= BASE_URL %>js/jquery.stellar.min.js"></script>
+    <script src="<%= BASE_URL %>js/owl.carousel.min.js"></script>
+    <script src="<%= BASE_URL %>js/smoothscroll.js"></script>
+    <script src="<%= BASE_URL %>js/custom.js"></script>
   </body>
 </html>
